2008-06-22  Stefan Kost  <ensonic@users.sf.net>

	* glib/Makefile.am:
	* gobject/Makefile.am:
	  Unify the Makefiles. In glib only scan glib folders.

2008-06-16  Ross Burton  <ross@burtonini.com>

	* gio/gio-sections.txt:
	Add g_file_enumerator_get_container.

2008-06-14  Matthias Clasen  <mclasen@redhat.com>

	* glib/tmpl/macros_misc.sgml: Document G_GNUC_MAY_ALIAS

	* glib/tmpl/testing.sgml: Move docs around, and add more

	* glib/tmpl/unicode.sgml: Document break types

	* glib/tmpl/hash_tables.sgml: Add docs for GHashTableIter

2008-06-12  Matthias Clasen  <mclasen@redhat.com>
	
	* === Released 2.17.2 ===

2008-06-12  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.17.1 ===

2008-06-12  Matthias Clasen  <mclasen@redhat.com>

	* gio/gio-sections.txt: Add some new symbols

2008-06-12  Matthias Clasen  <mclasen@redhat.com>

	* glib/running.sgml: Remove mention of G_WIN32_PRETEND_WIN9X

2008-06-12  Ross Burton  <ross@burtonini.com>

	* gio/gio-sections.txt:
	Add g_file_make_directory_with_parents.

2008-06-12  Matthias Clasen  <mclasen@redhat.com>

	* glib/glib-sections.txt: Testing documentation fixups

2008-06-12  Matthias Clasen  <mclasen@redhat.com>

	* glib/gtester.xml:
	* glib/gtester.1:
	* glib/gtester-report.xml:
	* glib/gtester-report.1:
	* glib/glib-docs.sgml:
	* glib/Makefile.am: Add gtester, gtester-report man pages

2008-06-11  Behdad Esfahbod  <behdad@gnome.org>

	* glib/glib-sections.txt: Add g_dgettext() and g_dngettext().

2008-06-11  Matthias Clasen  <mclasen@redhat.com>

	Bug 535418 – Please document which glib version defines goffset

	* glib/tmpl/types.sgml: Add a Since tag for goffset
	Proposed by Holger Berndt

2008-06-11  Matthias Clasen  <mclasen@redhat.com>

	Bug 528715 – Misprint in the description of the interface
	g_type_class_add_private

	* glib/tmpl/macros_misc.sgml:
	* gobject/tmpl/gclosure.sgml:
	* gobject/tmpl/gtype.sgml: Fix typos
	Noticed by Areg Beketovski

2008-06-11  Matthias Clasen  <mclasen@redhat.com>
